# zpu_toolchain

./: .gitignore  .gitmodules  README.md
apps/: README.md
apps/HEXimport/: hex_import.c  test  testhex.hex
apps/HEXimport/structs/: importer.h  intel_hex.h
apps/zpugui/: zpugui
apps/zputools/: .gitignore  Makefile  Makefile.in  config.h.in  configure  configure.in  setup.py
apps/zputools-python/: Makefile  config.status  configure.in
apps/zputools-python/src/: libzputerm.py  zpuload  zputerm
apps/zputools/src/: zpuio.c  zpuload.c
concept/braindump/: bd.md
concept/tex/: concept.tex
hausarbeit/: main.tex
hausarbeit/.texpadtmp/: main.blg
hausarbeit/bib/: bib.bib
hausarbeit/lib/: jurabib.tex
module/: .gitignore  Makefile  README.md  fifo.c  modzpu.c  modzpu.h  zpu_io.c  zpu_irq.c  zpu_mem.c  zpu_open.c
module/scripts/: load.sh  unload.sh
notes/: notizen.txt
tests/: README.md
tex/: README.md  main.tex
tex/bib/: bib.bib
tex/concept/: README.md
tex/concept/braindump/: bd.md
tex/concept/tex/: concept.tex
tex/config/: credencials.tex
tex/hausarbeit/: .gitignore  main.tex
tex/hausarbeit/.texpadtmp/: main.blg
tex/hausarbeit/bib/: bib.bib
tex/presentation/: presentation.tex
tex/snippets/: archOverview.tex  libcintelhex_datastructs.tex  zpuIO.tex
