#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([zputools], [1.0], [martin-helmich@hs-osnabrueck.de])

AC_PREFIX_DEFAULT([/usr/])

# Checks for programs.
AC_PATH_PROGS([PYTHON], [python python2.6], [AC_MSG_ERROR([Could not find python.])])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
