#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([zputools], [1.0], [martin.helmich@hs-osnabrueck.de])
AC_CONFIG_SRCDIR([src/zpuio.c])
AC_CONFIG_HEADERS([config.h])

AC_PREFIX_DEFAULT([/usr/local])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.
AC_CHECK_LIB([cintelhex],[ihex_rs_from_file],[],[AC_MSG_ERROR([Could not find cintelhex library.])])
AC_CHECK_LIB([zpu],[zpu_load_from_file],[],[AC_MSG_ERROR([Could not find zpu library.])])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h stdio.h string.h cintelhex.h zpu.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strcmp])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
